calculated missing values for the given datasets

--- a/Notebooks/Data_Exploration.ipynb
+++ b/Notebooks/Data_Exploration.ipynb
@@ -37,7 +37,6 @@
     "from data_manipulation import DataManipulator\n",
     "from Graphs import draw\n",
     "from Results import result_picker\n",
-    "from Loader import loading\n",
     "\n"
    ]
   },
@@ -346,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ea018c7",
+   "id": "4e5aed7d",
    "metadata": {},
    "source": [
     "#### Train and Test data has a compromizable (almost no) missing data"
@@ -397,7 +396,7 @@
    "execution_count": 14,
    "id": "5dd5261b",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -507,9 +506,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d1f8b1c",
+   "metadata": {},
+   "source": [
+    "#### Promos2sinceweek, Promo2SinceYear, PromoInterval have almost missing data of 50%, which are irrelevant for decision making so will be omitted"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7195671",
+   "id": "b7b1b1be",
    "metadata": {},
    "outputs": [],
    "source": []
