--- a/Notebooks/Data_Exploration.ipynb
+++ b/Notebooks/Data_Exploration.ipynb
@@ -50,9 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "ebc347a0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -345,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e5aed7d",
+   "id": "68868ac9",
    "metadata": {},
    "source": [
     "#### Train and Test data has a compromizable (almost no) missing data"
@@ -507,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d1f8b1c",
+   "id": "9153ac95",
    "metadata": {},
    "source": [
     "#### Promos2sinceweek, Promo2SinceYear, PromoInterval have almost missing data of 50%, which are irrelevant for decision making so will be omitted"
@@ -515,8 +517,235 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "56de5839",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#train_df['StateHoliday'] = train_df['StateHoliday'].apply(lambda x: 0 if x == '0' else x)\n",
+    "#test_df['StateHoliday'] = test_df['StateHoliday'].apply(lambda x: 0 if x == '0' else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "05465404",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#given the object type date so we have to change it to datatime for seasonality analysis\n",
+    "train_cleaner = DataCleaner(train_df)\n",
+    "test_cleaner = DataCleaner(test_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "2cd166f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Store                     int64\n",
+       "DayOfWeek                 int64\n",
+       "Date             datetime64[ns]\n",
+       "Sales                     int64\n",
+       "Customers                 int64\n",
+       "Open                      int64\n",
+       "Promo                     int64\n",
+       "StateHoliday             object\n",
+       "SchoolHoliday             int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_cleaner.change_column_to_date_type('Date')\n",
+    "test_cleaner.change_column_to_date_type('Date')\n",
+    "\n",
+    "train_cleaner.df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "1ab09834",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Id                        int64\n",
+       "Store                     int64\n",
+       "DayOfWeek                 int64\n",
+       "Date             datetime64[ns]\n",
+       "Open                    float64\n",
+       "Promo                     int64\n",
+       "StateHoliday             object\n",
+       "SchoolHoliday             int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_cleaner.df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "af09f77f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Customers</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Promo</th>\n",
+       "      <th>StateHoliday</th>\n",
+       "      <th>SchoolHoliday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>5263</td>\n",
+       "      <td>555</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>6064</td>\n",
+       "      <td>625</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>8314</td>\n",
+       "      <td>821</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>13995</td>\n",
+       "      <td>1498</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>4822</td>\n",
+       "      <td>559</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Store  DayOfWeek  Year  Month  Day  Sales  Customers  Open  Promo  \\\n",
+       "0      1          5  2015      7   31   5263        555     1      1   \n",
+       "1      2          5  2015      7   31   6064        625     1      1   \n",
+       "2      3          5  2015      7   31   8314        821     1      1   \n",
+       "3      4          5  2015      7   31  13995       1498     1      1   \n",
+       "4      5          5  2015      7   31   4822        559     1      1   \n",
+       "\n",
+       "  StateHoliday  SchoolHoliday  \n",
+       "0            0              1  \n",
+       "1            0              1  \n",
+       "2            0              1  \n",
+       "3            0              1  \n",
+       "4            0              1  "
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_cleaner.df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b7b1b1be",
+   "id": "dc08ceeb",
    "metadata": {},
    "outputs": [],
    "source": []
