--- a/Notebooks/Data_Exploration.ipynb
+++ b/Notebooks/Data_Exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "id": "9054264f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "id": "082293f1",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
    "id": "ebc347a0",
    "metadata": {
     "scrolled": true
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "id": "527246a8",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 66,
    "id": "80c4072d",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "SchoolHoliday                     0              0.0 %"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 67,
    "id": "c2107eb1",
    "metadata": {
     "scrolled": true
@@ -336,7 +336,7 @@
        "SchoolHoliday                     0              0.0 %"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68868ac9",
+   "id": "945e5682",
    "metadata": {},
    "source": [
     "#### Train and Test data has a compromizable (almost no) missing data"
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "id": "4de93c6b",
    "metadata": {
     "scrolled": false
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "id": "5dd5261b",
    "metadata": {
     "scrolled": false
@@ -495,7 +495,7 @@
        "PromoInterval                               544            48.79 %"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9153ac95",
+   "id": "800c0817",
    "metadata": {},
    "source": [
     "#### Promos2sinceweek, Promo2SinceYear, PromoInterval have almost missing data of 50%, which are irrelevant for decision making so will be omitted"
@@ -517,19 +517,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "56de5839",
+   "execution_count": 70,
+   "id": "5eccefef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#train_df['StateHoliday'] = train_df['StateHoliday'].apply(lambda x: 0 if x == '0' else x)\n",
-    "#test_df['StateHoliday'] = test_df['StateHoliday'].apply(lambda x: 0 if x == '0' else x)"
+    "train_df['StateHoliday'] = train_df['StateHoliday'].apply(lambda x: 0 if x == '0' else x)\n",
+    "test_df['StateHoliday'] = test_df['StateHoliday'].apply(lambda x: 0 if x == '0' else x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "05465404",
+   "execution_count": 71,
+   "id": "685d9320",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,8 +540,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "2cd166f1",
+   "execution_count": 72,
+   "id": "4f3502d9",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,8 +573,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "1ab09834",
+   "execution_count": 73,
+   "id": "905fb7f6",
    "metadata": {
     "scrolled": true
    },
@@ -593,7 +593,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,8 +604,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "af09f77f",
+   "execution_count": 74,
+   "id": "8103aa89",
    "metadata": {},
    "outputs": [
     {
@@ -631,9 +631,7 @@
        "      <th></th>\n",
        "      <th>Store</th>\n",
        "      <th>DayOfWeek</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Month</th>\n",
-       "      <th>Day</th>\n",
+       "      <th>Date</th>\n",
        "      <th>Sales</th>\n",
        "      <th>Customers</th>\n",
        "      <th>Open</th>\n",
@@ -647,9 +645,7 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>5</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
-       "      <td>31</td>\n",
+       "      <td>2015-07-31</td>\n",
        "      <td>5263</td>\n",
        "      <td>555</td>\n",
        "      <td>1</td>\n",
@@ -661,9 +657,7 @@
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
-       "      <td>31</td>\n",
+       "      <td>2015-07-31</td>\n",
        "      <td>6064</td>\n",
        "      <td>625</td>\n",
        "      <td>1</td>\n",
@@ -675,9 +669,7 @@
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>5</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
-       "      <td>31</td>\n",
+       "      <td>2015-07-31</td>\n",
        "      <td>8314</td>\n",
        "      <td>821</td>\n",
        "      <td>1</td>\n",
@@ -689,9 +681,7 @@
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>5</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
-       "      <td>31</td>\n",
+       "      <td>2015-07-31</td>\n",
        "      <td>13995</td>\n",
        "      <td>1498</td>\n",
        "      <td>1</td>\n",
@@ -703,9 +693,7 @@
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
-       "      <td>31</td>\n",
+       "      <td>2015-07-31</td>\n",
        "      <td>4822</td>\n",
        "      <td>559</td>\n",
        "      <td>1</td>\n",
@@ -718,22 +706,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   Store  DayOfWeek  Year  Month  Day  Sales  Customers  Open  Promo  \\\n",
-       "0      1          5  2015      7   31   5263        555     1      1   \n",
-       "1      2          5  2015      7   31   6064        625     1      1   \n",
-       "2      3          5  2015      7   31   8314        821     1      1   \n",
-       "3      4          5  2015      7   31  13995       1498     1      1   \n",
-       "4      5          5  2015      7   31   4822        559     1      1   \n",
+       "   Store  DayOfWeek       Date  Sales  Customers  Open  Promo StateHoliday  \\\n",
+       "0      1          5 2015-07-31   5263        555     1      1            0   \n",
+       "1      2          5 2015-07-31   6064        625     1      1            0   \n",
+       "2      3          5 2015-07-31   8314        821     1      1            0   \n",
+       "3      4          5 2015-07-31  13995       1498     1      1            0   \n",
+       "4      5          5 2015-07-31   4822        559     1      1            0   \n",
        "\n",
-       "  StateHoliday  SchoolHoliday  \n",
-       "0            0              1  \n",
-       "1            0              1  \n",
-       "2            0              1  \n",
-       "3            0              1  \n",
-       "4            0              1  "
+       "   SchoolHoliday  \n",
+       "0              1  \n",
+       "1              1  \n",
+       "2              1  \n",
+       "3              1  \n",
+       "4              1  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,8 +732,202 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 76,
+   "id": "c4527b39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Combining train and store data using store id since it's found on both\n",
+    "combined_df = DataCleaner(train_df)\n",
+    "combined_df = combined_df.add_columns_from_another_df_using_column(store_df, 'Store', [\n",
+    "                                                               'StoreType', 'Assortment', 'CompetitionDistance', 'CompetitionOpenSinceMonth', 'CompetitionOpenSinceYear','Promo2'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "3852bb8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Customers</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Promo</th>\n",
+       "      <th>StateHoliday</th>\n",
+       "      <th>SchoolHoliday</th>\n",
+       "      <th>StoreType</th>\n",
+       "      <th>Assortment</th>\n",
+       "      <th>CompetitionDistance</th>\n",
+       "      <th>CompetitionOpenSinceMonth</th>\n",
+       "      <th>CompetitionOpenSinceYear</th>\n",
+       "      <th>Promo2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>5263</td>\n",
+       "      <td>555</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>c</td>\n",
+       "      <td>a</td>\n",
+       "      <td>1270.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>6064</td>\n",
+       "      <td>625</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>570.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2007.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>8314</td>\n",
+       "      <td>821</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>14130.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>13995</td>\n",
+       "      <td>1498</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>c</td>\n",
+       "      <td>c</td>\n",
+       "      <td>620.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>4822</td>\n",
+       "      <td>559</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>29910.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Store  DayOfWeek       Date  Sales  Customers  Open  Promo StateHoliday  \\\n",
+       "0      1          5 2015-07-31   5263        555     1      1            0   \n",
+       "1      2          5 2015-07-31   6064        625     1      1            0   \n",
+       "2      3          5 2015-07-31   8314        821     1      1            0   \n",
+       "3      4          5 2015-07-31  13995       1498     1      1            0   \n",
+       "4      5          5 2015-07-31   4822        559     1      1            0   \n",
+       "\n",
+       "   SchoolHoliday StoreType Assortment  CompetitionDistance  \\\n",
+       "0              1         c          a               1270.0   \n",
+       "1              1         a          a                570.0   \n",
+       "2              1         a          a              14130.0   \n",
+       "3              1         c          c                620.0   \n",
+       "4              1         a          a              29910.0   \n",
+       "\n",
+       "   CompetitionOpenSinceMonth  CompetitionOpenSinceYear  Promo2  \n",
+       "0                        9.0                    2008.0       0  \n",
+       "1                       11.0                    2007.0       1  \n",
+       "2                       12.0                    2006.0       1  \n",
+       "3                        9.0                    2009.0       0  \n",
+       "4                        4.0                    2015.0       0  "
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "0d00e0dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_df.to_csv('../data/store_train_combined.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "dc08ceeb",
+   "id": "e167befe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -756,18 +938,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.8"
   }
  },
  "nbformat": 4,
