--- a/Notebooks/Data_Exploration.ipynb
+++ b/Notebooks/Data_Exploration.ipynb
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "76ecae47",
+   "id": "84e0fe75",
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "60088050",
+   "id": "f4dfd81d",
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f7e8a65",
+   "id": "e1b33604",
    "metadata": {},
    "source": [
     "### C) Find out any seasonal (Christmas, Easter etc) purchase behaviours"
@@ -982,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "aab82ef7",
+   "id": "09808b43",
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "84fce83b",
+   "id": "262dfafd",
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "2204a1ab",
+   "id": "74a13253",
    "metadata": {},
    "outputs": [
     {
@@ -1127,13 +1127,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "44e6edd8",
+   "metadata": {},
+   "source": [
+    "### d) What can you say about the correlation between sales and number of customers?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "054f68a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Customers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Sales</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.894711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Customers</th>\n",
+       "      <td>0.894711</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Sales  Customers\n",
+       "Sales      1.000000   0.894711\n",
+       "Customers  0.894711   1.000000"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_nd_customer = train_df.loc[:,['Sales','Customers']]\n",
+    "sales_cutomer_corr = sales_nd_customer.corr()\n",
+    "sales_cutomer_corr"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dbdc0c3",
+   "id": "521670bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "d) "
+    "plt.figure(figsize=(10, 7))\n",
+    "sns.heatmap(sales_cutomer_corr, annot=True, square=True, fmt=\".2f\")\n",
+    "plt.title('Sales - Customer Relation ', size=18, fontweight='bold')\n",
+    "\n",
+    "plt.savefig('../data/salecustrln.png')"
    ]
   }
  ],
