--- a/Notebooks/Data_Exploration.ipynb
+++ b/Notebooks/Data_Exploration.ipynb
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "f6a2be8c",
+   "id": "1eb35af5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "b374cdf9",
+   "id": "97ff2c2c",
    "metadata": {
     "scrolled": true
    },
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "03aae411",
+   "id": "c1618cbf",
    "metadata": {
     "scrolled": true
    },
@@ -919,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "cb987e70",
+   "id": "e0d36f00",
    "metadata": {
     "scrolled": true
    },
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "ccff1bf2",
+   "id": "e74823f5",
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "844d98bb",
+   "id": "5001ef48",
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "cdfed348",
+   "id": "d136fa98",
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "79f19cc4",
+   "id": "6ae4bb53",
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6617b517",
+   "id": "d5eb3dd8",
    "metadata": {},
    "source": [
     "### C) Find out any seasonal (Christmas, Easter etc) purchase behaviours"
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "1a37c56f",
+   "id": "280e9c6e",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "ae9ec14c",
+   "id": "547fbc2a",
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1260,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "9ff5aca5",
+   "id": "4f4074b3",
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49a4e410",
+   "id": "ec709900",
    "metadata": {},
    "source": [
     "### d) What can you say about the correlation between sales and number of customers?"
@@ -1288,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "5ea8ae22",
+   "id": "dbd21090",
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "ad831ce1",
+   "id": "dbeff692",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c48387a1",
+   "id": "42273e10",
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b7192ce",
+   "id": "cb68eee7",
    "metadata": {},
    "source": [
     "#### e) How does promo affect sales? Are the promos attracting more customers? How does it affect already existing customers?"
@@ -1418,7 +1418,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "2cce62f1",
+   "id": "adad8ff5",
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1481,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "69725dfd",
+   "id": "719b66b3",
    "metadata": {},
    "outputs": [
     {
@@ -1508,7 +1508,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "53acf437",
+   "id": "6c3eabf8",
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "583a01af",
+   "id": "76ef6e61",
    "metadata": {},
    "outputs": [
     {
@@ -1569,7 +1569,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "6da1c843",
+   "id": "0efeb497",
    "metadata": {},
    "outputs": [
     {
@@ -1601,7 +1601,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "eef1e608",
+   "id": "3ab9ef81",
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1664,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "3eb86b2b",
+   "id": "ad3db50e",
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1689,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "c477bdee",
+   "id": "9ddf68a6",
    "metadata": {},
    "outputs": [
     {
@@ -1825,7 +1825,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "48bf535a",
+   "id": "7f452dc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1846,7 +1846,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "f7f7d786",
+   "id": "922a117f",
    "metadata": {},
    "outputs": [
     {
@@ -1866,7 +1866,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "d66c0804",
+   "id": "2575cddb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1881,7 +1881,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "58ccc571",
+   "id": "dcf055c0",
    "metadata": {},
    "outputs": [
     {
@@ -2011,7 +2011,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "fbe057a6",
+   "id": "8a9f8e68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2026,7 +2026,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "049b034e",
+   "id": "8bf50dd2",
    "metadata": {},
    "outputs": [
     {
@@ -2069,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "e85b3d0d",
+   "id": "b3862a24",
    "metadata": {},
    "outputs": [
     {
@@ -2186,7 +2186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20099d97",
+   "id": "ab0311b9",
    "metadata": {},
    "source": [
     "### f) Could the promos be deployed in more effective ways? Which stores should promos be deployed in?"
@@ -2194,7 +2194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c5bd5c0",
+   "id": "6ffcb34f",
    "metadata": {},
    "source": [
     "#### Based on StoreType "
@@ -2203,7 +2203,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "ebc5e8bb",
+   "id": "a17c4c2f",
    "metadata": {},
    "outputs": [
     {
@@ -2236,7 +2236,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "6b2e0bc3",
+   "id": "680835cd",
    "metadata": {},
    "outputs": [
     {
@@ -2255,7 +2255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2eb5cb45",
+   "id": "a377a92f",
    "metadata": {},
    "source": [
     "#### Based on Assortment type"
@@ -2264,7 +2264,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "eb43e0eb",
+   "id": "c34cac33",
    "metadata": {},
    "outputs": [
     {
@@ -2286,7 +2286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1d37dd7",
+   "id": "cb0a3ace",
    "metadata": {},
    "source": [
     "#### checking percentage increase"
@@ -2295,7 +2295,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "97beeb3c",
+   "id": "040fdc08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2314,7 +2314,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "e547a0f3",
+   "id": "f721d56f",
    "metadata": {},
    "outputs": [
     {
@@ -2432,7 +2432,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "51452845",
+   "id": "8d3386f0",
    "metadata": {},
    "outputs": [
     {
@@ -2547,7 +2547,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "7c02edee",
+   "id": "16dc56b3",
    "metadata": {},
    "outputs": [
     {
@@ -2782,7 +2782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "233bd3e6",
+   "id": "2a142dcc",
    "metadata": {},
    "source": [
     "### g) Trends of customer behavior during store open and closing times"
@@ -2790,8 +2790,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 107,
+   "id": "2b3b7eb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customers</th>\n",
+       "      <th>Sales</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Open</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>762.728395</td>\n",
+       "      <td>6955.514291</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Customers        Sales\n",
+       "Open                         \n",
+       "0       0.000000     0.000000\n",
+       "1     762.728395  6955.514291"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer_behaviour = train_df.groupby('Open').agg({'Customers':'mean','Sales':'mean'})\n",
+    "customer_behaviour"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "64fe4dd6",
+   "id": "bf9f8d36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Interms of days of the week\n",
+    "\n",
+    "f, ax = plt.subplots(figsize=(10, 6))\n",
+    "sns.lineplot(x=\"DayOfWeek\",y=\"Customers\",hue=\"Open\",data=combined_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1d8f4ee",
    "metadata": {},
    "outputs": [],
    "source": []
