changing date data type

--- a/Notebooks/Data_preprocessing.ipynb
+++ b/Notebooks/Data_preprocessing.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ec31c36a",
+   "id": "843f3be1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a13be54a",
+   "id": "57a5b426",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a09145bb",
+   "id": "15b2b7f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d9395382",
+   "id": "9428787d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2437c8ec",
+   "id": "971b61c6",
    "metadata": {},
    "source": [
     "## DATA INFORMATION"
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "84aad142",
+   "id": "ce19e015",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "21714751",
+   "id": "3f07128d",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "9447d4f0",
+   "id": "78dd1c14",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50310df9",
+   "id": "9e1a1826",
    "metadata": {},
    "source": [
     "## MISSING VALUES"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a003d00e",
+   "id": "d2faa90e",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "16a62f39",
+   "id": "cf345039",
    "metadata": {
     "scrolled": true
    },
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c5db704",
+   "id": "bdbaecc2",
    "metadata": {},
    "source": [
     "#### Train and Test data has a compromizable (almost no) missing data"
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "85bc1127",
+   "id": "8d296a71",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c54e57f1",
+   "id": "be37ac79",
    "metadata": {},
    "source": [
     "## Cleaning Data"
@@ -533,12 +533,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "6b25c191",
+   "execution_count": 43,
+   "id": "6497eb12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#crating a cleaner object for all data\n",
+    "#creating a cleaner object for all data\n",
     "train_data_cleaner = DataCleaner(train_df)\n",
     "test_data_cleaner = DataCleaner(test_df)\n",
     "store_data_cleaner=DataCleaner(store_df)\n"
@@ -546,71 +546,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "fc2f9fe3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Store                     int64\n",
-       "DayOfWeek                 int64\n",
-       "Date             datetime64[ns]\n",
-       "Sales                     int64\n",
-       "Customers                 int64\n",
-       "Open                      int64\n",
-       "Promo                     int64\n",
-       "StateHoliday             object\n",
-       "SchoolHoliday             int64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#changing the Date data type to datetime\n",
-    "train_data_cleaner.change_column_to_date_type('Date')\n",
-    "test_data_cleaner.change_column_to_date_type('Date')\n",
-    "\n",
-    "train_data_cleaner.df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "d9c12910",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Id                        int64\n",
-       "Store                     int64\n",
-       "DayOfWeek                 int64\n",
-       "Date             datetime64[ns]\n",
-       "Open                    float64\n",
-       "Promo                     int64\n",
-       "StateHoliday             object\n",
-       "SchoolHoliday             int64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_data_cleaner.df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "b7537a62",
+   "id": "eda54158",
    "metadata": {},
    "outputs": [],
    "source": []
