separate date time column

--- a/Notebooks/Data_preprocessing.ipynb
+++ b/Notebooks/Data_preprocessing.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "843f3be1",
+   "id": "25576496",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "57a5b426",
+   "id": "3bfe86ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "15b2b7f4",
+   "id": "62f81951",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9428787d",
+   "id": "4d30f630",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "971b61c6",
+   "id": "1f183176",
    "metadata": {},
    "source": [
     "## DATA INFORMATION"
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ce19e015",
+   "id": "93c6a28f",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "3f07128d",
+   "id": "4117c18f",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "78dd1c14",
+   "id": "f775f3ec",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e1a1826",
+   "id": "607c17df",
    "metadata": {},
    "source": [
     "## MISSING VALUES"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d2faa90e",
+   "id": "ca256cf0",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "cf345039",
+   "id": "95fb06cc",
    "metadata": {
     "scrolled": true
    },
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdbaecc2",
+   "id": "9fe12d67",
    "metadata": {},
    "source": [
     "#### Train and Test data has a compromizable (almost no) missing data"
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8d296a71",
+   "id": "81bc487d",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be37ac79",
+   "id": "f5b2a35d",
    "metadata": {},
    "source": [
     "## Cleaning Data"
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "6497eb12",
+   "id": "b602dbe2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,8 +546,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "id": "d52d2188",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Store                     int64\n",
+       "DayOfWeek                 int64\n",
+       "Date             datetime64[ns]\n",
+       "Sales                     int64\n",
+       "Customers                 int64\n",
+       "Open                      int64\n",
+       "Promo                     int64\n",
+       "StateHoliday             object\n",
+       "SchoolHoliday             int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#changing the Date data type to datetime\n",
+    "train_data_cleaner.change_column_to_date_type('Date')\n",
+    "test_data_cleaner.change_column_to_date_type('Date')\n",
+    "\n",
+    "train_data_cleaner.df.dtypes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "32b83279",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Id                        int64\n",
+       "Store                     int64\n",
+       "DayOfWeek                 int64\n",
+       "Date             datetime64[ns]\n",
+       "Open                    float64\n",
+       "Promo                     int64\n",
+       "StateHoliday             object\n",
+       "SchoolHoliday             int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data_cleaner.df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a3c46fb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#separating date column in to day , month and year columns\n",
+    "train_data_cleaner.separate_date_column(date_column='Date')\n",
+    "test_data_cleaner.separate_date_column(date_column='Date')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "eda54158",
+   "id": "42e075d9",
    "metadata": {},
    "outputs": [],
    "source": []
