saving cleaner data

--- a/Notebooks/Data_preprocessing.ipynb
+++ b/Notebooks/Data_preprocessing.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "665d8ded",
+   "id": "7dd124c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bf055967",
+   "id": "d4878a08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5e69172f",
+   "id": "f4e56b52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d7721232",
+   "id": "c29e3d79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90ffa7dc",
+   "id": "c0a037e7",
    "metadata": {},
    "source": [
     "## DATA INFORMATION"
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a58f2f46",
+   "id": "8043bf92",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "96dd3029",
+   "id": "6ccda361",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "28addb4b",
+   "id": "09c55680",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "067bb91c",
+   "id": "1b5378df",
    "metadata": {},
    "source": [
     "## MISSING VALUES"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "0f1d794b",
+   "id": "dc70f437",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "63e8ec07",
+   "id": "cdfcffe6",
    "metadata": {
     "scrolled": true
    },
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fde684b7",
+   "id": "d4c737ed",
    "metadata": {},
    "source": [
     "#### Train and Test data has a compromizable (almost no) missing data"
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "af7e2f53",
+   "id": "60ae21e6",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e89583f7",
+   "id": "781bb421",
    "metadata": {},
    "source": [
     "## Cleaning Data"
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "87a09e13",
+   "id": "71f77b58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "34dd594a",
+   "id": "511879e3",
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0ed8f862",
+   "id": "91fac9a3",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "f1228fe5",
+   "id": "f3316a1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "4735b392",
+   "id": "0ce68936",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "51d460d5",
+   "id": "1927986d",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f793e592",
+   "id": "af9534a7",
    "metadata": {},
    "source": [
     "## MERGING"
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "2ee823e4",
+   "id": "67e3a34d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "bc4f8100",
+   "id": "7927fb20",
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "fb157b4b",
+   "id": "07088d4d",
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "e645b46d",
+   "id": "29dc2d1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "842d34b0",
+   "id": "e8feb032",
    "metadata": {},
    "outputs": [
     {
@@ -1116,9 +1116,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef4054ca",
+   "metadata": {},
+   "source": [
+    "#### All missing values are filled"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0671bf5",
+   "metadata": {},
+   "source": [
+    "## Saving clean data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "0e993346",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_train_store_df.to_csv('../data/cleaner.csv')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d08ca6b2",
+   "id": "0163402b",
    "metadata": {},
    "outputs": [],
    "source": []
